# GenP

./: CMakeLists.txt
lib/GP-parallel/: CMakeLists.txt  GP-parallel.pc.in
lib/GP-parallel/src/: CPU.cpp  CPU.h  GPU.cpp  GPU.h  gpparallel.cpp  gpparallel.h  paramsparallel.cpp  paramsparallel.h  primitivesparallel.cpp  primitivesparallel.h
lib/GP-parallel/src/CL/: cl.hpp
lib/GP-simple/: CMakeLists.txt  GP-simple.pc.in
lib/GP-simple/src/: gpsingle.cpp  gpsingle.h  paramssingle.cpp  paramssingle.h  primitivessingle.cpp  primitivessingle.h
module/nodejs/: exchange.h  fire.cpp  fire.h
module/nodejs/node_async/: addon.cpp
module/nodejs/node_sync/: binding.gyp
module/nodejs/web/: index.js  towerData_raw.csv
module/nodejs/web/routes/: addon.js  addonsync.js
module/nodejs/web/views/: index.jade  primes.jade
src/: gpocl.cc  gpocl.pro
